<resources>
    <string name="app_name">Avanti</string>

    <string name="ip_string">187.163.97.114:8080</string>

    <string name="cotizacion">Cotizacion</string>

    <string name="hello_world">Hello world!</string>

    <string name="Pedido">Hacer Pedido</string>
    <string name="Cotizacion">Enviar Cotizacion</string>
    <string name="ConizacionN">Nueva Contizacion</string>
    <string name="Terminar">Terminar</string>
    <string name="Direccion">Direccion Entrega</string>
    <string name="Cliente">Cliente</string>
    <string name="Imprimir">Imprimir</string>
    <string name="Enviar">Enviar</string>
    <string name="listaP">Lista Productos</string>
    <string name="splash_s">Splash_screen</string>
    <string name="title_spiner">Condicion Pago</string>
    <string name="agregarC">Agregar Cliente</string>
    <string name="PDF">Enviar Email</string>
    <string name="cotizacion_producto">Cotizacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinnerv">
        <item>Clave</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
    </string-array>

    <string-array name="spinnerc">
        <item>Clave</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
    </string-array>

    <string-array name="stringDis">
        <item>Cantidad</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="title_activity_direccion">Direccion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_resumen">Resumen</string>
    <string name="title_activity_Nuevo_Producto">Agregar Producto</string>
    <string name="title_activity_cliente_c">Agregar Cliente</string>
    <string name="carrito">Ir al Carrito</string>
    <string name="title_activity_inicio_sesion">Inicio de Sesion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
