<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/agregarCli" android:title="@string/agregarC"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/EnviarCotizacion" android:title="@string/Cotizacion"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/NUevaCotizacion" android:title="@string/ConizacionN"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/PDF" android:title="@string/PDF"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/Terminar" android:title="@string/Terminar"
        android:orderInCategory="100" app:showAsAction="never" />


</menu>
