<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context="mx.intelisis.maserp.avanti.InicioSesion">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/fondo2"
        android:padding="0dp"/>

    <RelativeLayout
        android:paddingTop="230dp"
        android:id="@+id/contenedorMain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:paddingBottom="16sp" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/textView_Usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_usuario"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/textView_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:id="@+id/fechaLayout"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Sucursal"
                    android:id="@+id/date_text"
                    android:layout_above="@+id/textView2"
                    android:layout_alignParentStart="true"
                    android:textSize="12sp"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spineryfecha"
                    android:layout_alignParentStart="true"
                    android:weightSum="2">



                    <Spinner
                        android:prompt="@string/title_spiner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/spinner_Sucursal"
                        android:textSize="16sp"
                        android:layout_alignParentEnd="true"
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"
                        android:paddingBottom="12dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:textColor="@color/colorPrimaryDark"
                        android:id="@+id/sesion_fecha"
                        android:textSize="18sp"
                        android:text="Fecha"
                        android:gravity="end"
                        android:layout_weight="1"
                        />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:text="@string/action_sign_in"
                android:textStyle="normal"
                android:textColor="@color/md_white_1000"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>
    </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
